Fix page title alignment regression introduced in 5f08013. Fix #4227

--- a/wagtail/admin/static_src/wagtailadmin/scss/layouts/page-editor.scss
+++ b/wagtail/admin/static_src/wagtailadmin/scss/layouts/page-editor.scss
@@ -36,7 +36,7 @@
     .header-title {
         padding-left: 3.1em;
 
-        @include medium {
+        @media screen and (max-width: $breakpoint-mobile) {
             padding-left: 0;
             margin-left: -28px;
             // Because it's nested within tab-merged which we've given padding
